--- a/socialMediaSite/client/public/css/style.css
+++ b/socialMediaSite/client/public/css/style.css
@@ -150,13 +150,15 @@ body {
     display: flex;
     flex-direction: row;
     height: 80px;
-    width: 80%;
+    width:fit-content;
     align-items: start;
     margin-right: 15%;
     margin-bottom: 0px;
     cursor: pointer;
     transition: 0.05s ease;
     padding: 0px;
+    padding-right: 10px;
+    /* background-color: blue; */
 
 }
 
@@ -338,6 +340,8 @@ body {
     padding-bottom: 10px;
     padding-top: 10px;
     height: auto;
+    position: relative; 
+    /* Testing Relative Position; change if necessary */
 }
 
 .post p {
@@ -939,7 +943,7 @@ padding-top: 20px;
     margin-top: 10px;
     border-radius: 10px;
     background-color: #444444;
-
+    overflow-x: hidden;
 }
 
 #trendingList {
@@ -964,4 +968,93 @@ padding-top: 20px;
 
 .trendingItem:hover {
     scale: 1.04;
+}
+
+
+.openOptionsButton {
+    color: darkgray;
+    position: absolute;
+    right: 30px;
+    top: 20px;
+    cursor: pointer;
+    /* background-color: blue; */
+    /* width: 20px; */
+    padding: 10px;
+    text-align: center;
+}
+
+.openOptionsButton:hover {
+    color: grey;
+}
+
+.openOptionsButton:active {
+    color: rgb(150, 150, 150);
+}
+
+.openOptionsButton i {
+    font-size: 25px;
+}
+
+.postSubMenu, .userPostSubMenu {
+    display: none;
+    width: 165px;
+    height: auto;
+    border-radius: 4px;
+    border: 1px solid rgb(186, 186, 186);
+    background-color:#ddd;
+    position: absolute;
+    right: 25px;
+    top: 60px;
+    flex-direction: column;
+    box-shadow: 1px 5px 7px rgba(0, 0, 0, 0.208);
+}
+
+.postSubMenuOption {
+    width: 100%;
+    height: 30px;
+    background-color: #ddd;
+    border-bottom: 1.2px solid rgb(166, 166, 166);
+    cursor: pointer;
+    padding-left: 17px;
+    display: flex;
+}
+
+
+
+.postSubMenuOption:hover {
+    background-color: #cccccc;
+    transition: background-color 0.1s ease, box-shadow 0.1s ease;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.postSubMenuOption:active {
+    background-color: #c1c1c1;
+}
+
+.postSubMenuOptionContent {
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    align-items: center;
+    margin: 0px;
+    padding: 0px;
+    width: fit-content;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.postSubMenuOptionContent i {
+    color: grey;
+    height: fit-content;
+    width: fit-content;
+    margin-left: 0px;
+}
+
+.postSubMenuOptionContent p {
+    height: fit-content;
+    margin: 0px;
+    margin-left: 12px;
+    color: #2b2a2a;
 }
