--- a/socialMediaSite/client/public/css/style.css
+++ b/socialMediaSite/client/public/css/style.css
@@ -496,6 +496,7 @@ padding-top: 20px;
     padding-top: 10px;
     margin-bottom: 0px;
     margin-top: 5px;
+    position: relative;
 }
 
 .comment-header {
@@ -981,7 +982,6 @@ padding-top: 20px;
     /* width: 20px; */
     padding: 10px;
     text-align: center;
-    background-color: blue;
 }
 
 .openOptionsButton:hover {
@@ -1054,6 +1054,100 @@ padding-top: 20px;
 }
 
 .postSubMenuOptionContent p {
+    height: fit-content;
+    margin: 0px;
+    margin-left: 12px;
+    color: #2b2a2a;
+}
+
+
+.openCommentOptionsButton {
+    color: darkgray;
+    position: absolute;
+    right: 20px;
+    /* top: 20px; */
+    cursor: pointer;
+    /* background-color: blue; */
+    /* width: 20px; */
+    padding: 10px;
+    text-align: center;
+}
+
+.openCommentOptionsButton:hover {
+    color: grey;
+}
+
+.openCommentOptionsButton:active {
+    color: rgb(150, 150, 150);
+}
+
+.openCommentOptionsButton i {
+    font-size: 22px;
+}
+
+
+
+.commentSubMenu, .userCommentSubMenu {
+    display: none;
+    width: auto;
+    height: auto;
+    border-radius: 4px;
+    border: 1px solid rgb(186, 186, 186);
+    background-color:#ddd;
+    position: absolute;
+    right: 25px;
+    top: 50px;
+    flex-direction: column;
+    box-shadow: 1px 5px 7px rgba(0, 0, 0, 0.208);
+    z-index: 1;
+}
+
+
+.commentSubMenuOption {
+    width: 100%;
+    height: 30px;
+    background-color: #ddd;
+    border-bottom: 1.2px solid rgb(166, 166, 166);
+    cursor: pointer;
+    padding-left: 17px;
+    padding-right: 10px;
+    display: flex;
+}
+
+
+
+.commentSubMenuOption:hover {
+    background-color: #cccccc;
+    transition: background-color 0.1s ease, box-shadow 0.1s ease;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.commentSubMenuOption:active {
+    background-color: #c1c1c1;
+}
+
+.commentSubMenuOptionContent {
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    align-items: center;
+    margin: 0px;
+    padding: 0px;
+    width: fit-content;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.commentSubMenuOptionContent i {
+    color: grey;
+    height: fit-content;
+    width: 18px;
+    text-align: center;    
+}
+
+.commentSubMenuOptionContent p {
     height: fit-content;
     margin: 0px;
     margin-left: 12px;
