--- a/socialMediaSite/client/public/css/style.css
+++ b/socialMediaSite/client/public/css/style.css
@@ -1153,3 +1153,15 @@ padding-top: 20px;
     margin-left: 12px;
     color: #2b2a2a;
 }
+
+
+
+
+.nav-bar-link a {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 10px; /* match your design */
+}
